[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Art/door.png" type="Texture" id=1]
[ext_resource path="res://Puzzle Elements/Scripts/Door.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[node name="Door" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="DoorSpr" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 1 )

[node name="DoorCollide" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
